    UPGRADED-COMPLEX-PART-TYPE now take (ignored, in all situations)
    optional environment arguments, as required by ANSI.
  * fixed bugs in other functions taking environment objects, allowing
    calls with an explicit NIL environment argument to be compiled
    without error.
  * fixed bug 228: primary return values from
    FUNCTION-LAMBDA-EXPRESSION are either NIL or suitable for input to
    COMPILE or FUNCTION.
  * fixed a bug in DEFSTRUCT: predicates for :NAMED structures with
    :TYPE will no longer signal errors on innocuous objects.
  * fixed bug 231b: SETQ is better at respecting type declarations in
    the lexical environment.
  * fixed a bug in DEFCLASS: classes named by symbols with no or
    unprintable packages can now be defined.
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** ARRAY-IN-BOUNDS-P now allows arbitrary integers as arguments,
       not just nonnegative fixnums;
    ** the logical bit-array operators such as BIT-AND now accept an
       explicit NIL for their "opt-arg" argument (to indicate a
       freshly-consed result bit-array);

planned incompatible changes in 0.7.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, maybe in 0.7.x, maybe later, it might impact TRACE. They both
    encapsulate functions, and it's not clear yet how e.g. UNPROFILE
    will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are
    using profiling. If you never profile anything, TRACE should
    continue to behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.